--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+<div class="container">
+  <input type="text" [(ngModel)]="category">
+</div>
+
+<div [ngSwitch]="category">
+  <div *ngSwitchCase="'services'" class="container">
+    <app-card *ngFor="let item of services" [services]="item" appHighlight></app-card>
+  </div>
+</div>
+
+<button mat-fab class="action-btn" (click)="openDialog()">
+  <mat-icon>add</mat-icon>
+</button>
+
+
+
+<app-partyaccount-card style="margin: 20px;" *ngFor="let item of partyaccount | async" [partyaccount]="item"></app-partyaccount-card>
+<mat-divider></mat-divider>
+
+<h1 style="text-align: center;">Magas creditű partnerek</h1>
+<app-partyaccount-card style="margin: 20px;" *ngFor="let item of partyaccounthigh | async" [partyaccount]="item"></app-partyaccount-card>
+<h1 style="text-align: center;">Account típus = customer</h1>
+<app-partyaccount-card style="margin: 20px;" *ngFor="let item of partyaccountcustomer | async" [partyaccount]="item"></app-partyaccount-card>
+
+
+
+
+
+
