--- a/src/app/pages/partyaccount/partyaccount-update/partyaccount-update.component.html
+++ b/src/app/pages/partyaccount/partyaccount-update/partyaccount-update.component.html
@@ -1,35 +1,35 @@
 <form [formGroup]="form">
-    <h3>Party Account felvétel</h3>
+    <h3>Party Account update</h3>
     <mat-form-field class="max-width">
-      <mat-label>Cím</mat-label>
+      <mat-label>accountType</mat-label>
       <input matInput placeholder="accountType" focus formControlName="accountType" required>
     </mat-form-field>
     <mat-form-field class="max-width">
-        <mat-label>Cím</mat-label>
+        <mat-label>creditLimit</mat-label>
         <input type="number" matInput placeholder="creditLimit" focus formControlName="creditLimit" required>
     </mat-form-field>
     <mat-form-field class="max-width">
-      <mat-label>Cím</mat-label>
+      <mat-label>description</mat-label>
       <input matInput placeholder="description" focus formControlName="description" required>
     </mat-form-field>
     <mat-form-field class="max-width">
-        <mat-label>Cím</mat-label>
+        <mat-label>href</mat-label>
         <input matInput placeholder="href" focus formControlName="href" required>
     </mat-form-field>
     <mat-form-field class="max-width">
-      <mat-label>Cím</mat-label>
+      <mat-label>lastModified</mat-label>
       <input matInput placeholder="lastModified" focus formControlName="lastModified" required>
     </mat-form-field>
     <mat-form-field class="max-width">
-        <mat-label>Cím</mat-label>
+        <mat-label>name</mat-label>
         <input matInput placeholder="name" focus formControlName="name" required>
     </mat-form-field>    
     <mat-form-field class="max-width">
-        <mat-label>Cím</mat-label>
+        <mat-label>paymentStatus</mat-label>
         <input matInput placeholder="paymentStatus" focus formControlName="paymentStatus" required>
     </mat-form-field>    
     <mat-form-field class="max-width">
-        <mat-label>Cím</mat-label>
+        <mat-label>state</mat-label>
         <input matInput placeholder="state" focus formControlName="state" required>
     </mat-form-field>
 
